Make sure images do not overflow cropper box

--- a/OpenOversight/app/static/theme.css
+++ b/OpenOversight/app/static/theme.css
@@ -33,3 +33,8 @@ body {
     max-height:80%;
     max-width:80%;
 }
+
+/* Limit image width to avoid overflow the cropper container */
+img {
+  max-width: 100%;
+}
